@@ -37,7 +37,9 @@
 <ul>
 		
 		<li>
-<b>Bug Fix:</b> Placeholders: updated 'slot' table SQL so that updaters do not need to be run for new installations. (<em>2008-10-14 - Adam Franco</em>)</li>
+<b>Bug Fix:</b> Installation: Updated 'slot' table SQL so that updaters do not need to be run for new installations. (<em>2008-10-14 - Adam Franco</em>)</li>
+		<li>
+<b>Bug Fix:</b> Installation: Reordered SQL files so that new installations will succeed. (<em>2008-10-14 - Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 2.2.5.0</h2>
 <h3>2008-10-13</h3>
